# timiGS-

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY_FIXES.md  docker-compose.yml  fetch-icons.mjs  index.html  install.sh  install_arch.sh  package-lock.json  package.json  push_updates.ps1  release-please-config.json  remove_android.cjs  remove_android.js  update_locales.js  verify_build.ps1  vite.config.ts
.github/: WORKFLOWS.md
.github/workflows/: build.yml  ci-check.yml  ci.yml  deno_cli.yml  docker.yml  flutter-android.yml  jekyll-gh-pages.yml  legacy-builds.yml  pr-check.yml  release-build.yml  release-please.yml  release.yml  sourceforge-upload.yml  update-readme-status.yml
docker/: nginx.conf
legacy-builds/win32/: Cargo.toml  build.ps1  tauri.conf.json
legacy-builds/winxp/: Cargo.toml  build.ps1  tauri.conf.json
public/music/: README.txt
scripts/: configure-android-signing.js  deno-cli.ts  generate-installer-assets.js  patch-android-manifest.js
site/: .env.example  .gitignore  astro.config.mjs  fix_phosphor.mjs  metadata.json  package-lock.json  package.json  replace_icons.mjs  tailwind.config.mjs  tsconfig.json  update_tabs.mjs
site/.astro/: data-store.json  settings.json
site/_legacy/: App.tsx  index.html
site/public/: docs.json  music.json  notes.json
site/public/Note-md-store/: 28.02.26.md  30.1.26.md  welcome.md
site/public/docx/: 1.md  analytics.md  coding.md  dashboard.md  docker.md  doctor-mode.md  features.md  focus-mode.md  github-api.md  google-api.md  install.md  settings.md  tabs.md  team.md  timeline.md  timeout.md  tracking.md  weather.md
site/src/components/: CustomCursor.tsx  DocsViewer.tsx  Footer.tsx  GitHubStats.tsx  Navbar.tsx  NotesViewer.tsx  ParticleBackground.tsx  SEOHead.astro  Sidebar.tsx
site/src/components/icons/: FeatureIcons.tsx
site/src/components/react-pages/: Download.tsx  DownloadClock.tsx  Home.tsx  MusicApp.tsx  Releases.tsx  Terms.tsx  Testing.tsx
site/src/i18n/: translations.ts  types.ts  utils.ts
site/src/i18n/translations/: ar.json  be.json  de.json  en.json  es.json  fr.json  nl.json  uk.json  zh-CN.json  zh-TW.json
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/pages/[lang]/: docs.astro  download.astro  index.astro  music.astro  notes.astro  releases.astro  terms.astro  testing.astro
site/src/services/: githubService.ts
src/: App.vue  i18n.ts  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  music.json  tray.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_tracker.rs  auth.rs  commands.rs  db.rs  discord.rs  drive.rs  focus.rs  github_auth.rs  github_sync.rs  icons.rs  lib.rs  main.rs  music.rs  notifications.rs  p2p.rs  picker.rs  tasks.rs  timeout.rs  timer.rs  tracker.rs  tray.rs
src-tauri/windows/: generate-graphics.js  generate-graphics.ps1  hooks.nsh  installer.nsh  sign.cjs  sign.ps1
src/components/: CodingTracker.vue  ConfirmDialog.vue  CustomCalendar.vue  DoctorModeLockScreen.vue  FocusMode.vue  ModernToggle.vue  NotificationToast.vue  ProcessExcludeModal.vue  ScreenPicker.vue  ShutdownTimer.vue  TasksWidget.vue  TeamNotification.vue  TimeOut.vue  TimeOutGlobalOverlay.vue
src/components/icons/: IconMap.ts
src/composables/: useConfirmDialog.ts  useTeamNotification.ts
src/directives/: clickOutside.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  pl.json  pt.json  uk.json  zh.json
src/stores/: activity.ts  doctorMode.ts  notifications.ts  sync.ts  teams.ts
src/styles/: index.css  settings-modern.css  view-styles.css
src/views/: Analytics.vue  Coding.vue  Compare.vue  Dashboard.vue  Github.vue  P2P.vue  Projects.vue  Settings.vue  Sync.vue  Team.vue  Timeline.vue  Tools.vue  Transfer.vue  Tray.vue  Weather.vue
timigs-android/: BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  build.bat  flutter_rust_bridge.yaml  pubspec.yaml
timigs-android/android/: build.gradle  local.properties
timigs-android/android/app/: build.gradle
timigs-android/android/app/src/main/: AndroidManifest.xml
timigs-android/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
timigs-android/android/app/src/main/kotlin/com/timigs/timigs_android/: BootReceiver.kt  MainActivity.kt  TrackingForegroundService.kt
timigs-android/android/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
timigs-android/lib/: main.dart
timigs-android/lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_uk.dart  app_uk.arb
timigs-android/lib/models/: activity_session.dart  app_usage_summary.dart  daily_stats.dart  settings.dart  task.dart
timigs-android/lib/screens/: analytics_screen.dart  dashboard_screen.dart  focus_screen.dart  google_drive_screen.dart  notepad_screen.dart  p2p_transfer_screen.dart  settings_screen.dart  sync_screen.dart  tasks_screen.dart  timeline_screen.dart  timeout_screen.dart  tools_screen.dart  transfer_screen.dart  weather_screen.dart
timigs-android/lib/services/: database_service.dart  google_drive_service.dart  notification_service.dart  p2p_service.dart  sync_service.dart  task_service.dart  tracker_service.dart
timigs-android/lib/src/rust/: api.dart
timigs-android/rust/: Cargo.toml  README.md
timigs-android/rust/src/: lib.rs
timigs-android/rust/src/api/: analytics.rs  database.rs  mod.rs  sessions.rs  settings.rs  tasks.rs
timigs-android/rust/src/db/: connection.rs  migrations.rs  mod.rs
timigs-android/rust/src/models/: activity_session.rs  app_usage.rs  daily_stats.rs  mod.rs  settings.rs  task.rs
