[package]
name = "timigs"
version = "0.1.0"
description = "TimiGS - Activity Tracker for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "timigs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
tiny_http = "0.12"
url = "2.5"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
parking_lot = "0.12"
opener = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
