[package]
name = "timigs"
version = "0.1.0"
description = "TimiGS - Activity Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "timigs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = "0.25"
oauth2 = "4.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls"] }
tiny_http = "0.12"
url = "2.5"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
parking_lot = "0.12"
opener = "0.7"
urlencoding = "2"
mime_guess = "2.0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
discord-rich-presence = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.20.0"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi"
] }

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies (managed by Tauri)
jni = "0.21"


