[package]
name = "timigs-winxp"
version = "1.0.0"
description = "TimiGS - Activity Tracker (Windows XP/2000 Legacy)"
authors = ["you"]
edition = "2021"

[lib]
name = "timigs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
dotenv = "0.15"

[dependencies]
# Core Tauri - без современных фич
tauri = { version = "2.1", features = [], default-features = false }
tauri-plugin-shell = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.1"

# Базовые зависимости
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5.0"
once_cell = "1.19"
parking_lot = "0.12"
urlencoding = "2"
csv = "1.4.0"
lazy_static = "1.4"

# Упрощенные версии для совместимости с XP
tokio = { version = "1", features = ["rt", "sync", "time"], default-features = false }

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
# Используем старые версии Windows API для совместимости с XP
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse"
] }

# Примечание: Следующие функции ОТКЛЮЧЕНЫ для XP версии:
# - tauri-plugin-autostart (не поддерживается)
# - tauri-plugin-updater (не поддерживается)
# - rodio (аудио может не работать)
# - P2P синхронизация (требует современные сетевые API)
