[package]
name = "timigs_core"
version = "0.1.0"
edition = "2021"
description = "TimiGS Android backend core library"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge for Dart-Rust FFI
flutter_rust_bridge = "2"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
android_logger = "0.13"

# Lazy initialization
once_cell = "1"

[profile.release]
lto = true
opt-level = "z"
strip = true
